# gifing

./: .gitignore  LICENSE  MANIFEST.in  README.md  conf.py  pyproject.toml  req.py  requirements.txt  sandbox.py  setup.py
.github/workflows/: ruff.yaml  test.yaml
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
gifing/: __init__.py  colors.py  main.py  utils.py
gifing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gifing/utils/: colors.py
source/: conf.py  index.rst
tests/: test__strcolor_to_rgb.py  test_colors.py  test_get_images.py  test_gif.py  test_make.py  test_set_background_color.py  test_set_labels.py  test_set_size.py  test_set_size_and_color.py  test_strcolor_to_rgb.py  test_version.py
