[project]
name = "gifing"
version = "0.1.0"
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
description = "A lightweight python tool for creating GIFs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: SIL Open Font License 1.1 (OFL-1.1)",
    "Operating System :: OS Independent",
]
dependencies = [
  "imageio",
  "numpy",
  "Pillow"
]

[tool.setuptools]
license_files = ["LICENSE", "OFL.md"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/JosephBARBIERDARNAL/gifing"
Issues = "https://github.com/JosephBARBIERDARNAL/gifing/issues"