[project]
name = "gifing"
version = "0.1.0"
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
description = "A lightweight python tool for creating GIFs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "imageio",
  "numpy",
  "Pillow"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/JosephBARBIERDARNAL/gifing"
Issues = "https://github.com/JosephBARBIERDARNAL/gifing/issues"