[project]
name = "gifing"
description = "A lightweight python tool for creating GIF"
version = "0.1.1"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["GIF", "image"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "imageio>=2.37.0",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gifing"]

[tool.uv.sources]
gifing = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://y-sunflower.github.io/gifing/"
Issues = "https://github.com/y-sunflower/gifing/issues"
Documentation = "https://y-sunflower.github.io/gifing/"
Repository = "https://github.com/y-sunflower/gifing"
